deploy/elixir/im/k8s/overlays/prod/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: im
  namespace: im-dev
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: im
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "4"
              memory: 2Gi
